# ChangeLog for xfce-extra/xfce4-taskmanager
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/www/viewcvs.gentoo.org/raw_cvs/gentoo-x86/xfce-extra/xfce4-taskmanager/ChangeLog,v 1.27 2008/05/04 11:07:15 drac Exp $

  04 May 2008; Samuli Suominen <drac@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Fix 'make check' wrt #219906, thanks to Alexis Ballier.

  25 Apr 2008; Samuli Suominen <drac@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Run full eautoreconf for bug 219124.

  24 Oct 2007; Christoph Mende <angelos@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Fix test suite and unrestrict it

  08 Jun 2007; Samuli Suominen <drac@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Stable on arm.

  01 Jun 2007; Brent Baude <ranger@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Marking xfce4-taskmanager-0.3.2-r1 ppc64 stable for bug #178510

  24 May 2007; Lars Weiler <pylon@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Stable on ppc; bug #178510.

  21 May 2007; Jeroen Roovers <jer@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Stable for HPPA (bug #178510).

  19 May 2007; Peter Weller <welp@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Stable on amd64 wrt bug 178510

  18 May 2007; Raúl Porcel <armin76@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  alpha/ia64/x86 stable wrt #178510

  15 May 2007; Gustavo Zacarias <gustavoz@gentoo.org>
  xfce4-taskmanager-0.3.2-r1.ebuild:
  Stable on sparc wrt #178510

*xfce4-taskmanager-0.3.2-r1 (22 Apr 2007)

  22 Apr 2007; Samuli Suominen <drac@gentoo.org>
  +xfce4-taskmanager-0.3.2-r1.ebuild:
  Install desktop menu entry.

  15 Mar 2007; Markus Rothe <corsair@gentoo.org>
  xfce4-taskmanager-0.3.2.ebuild:
  Stable on ppc64; bug #169987

  14 Mar 2007; Samuli Suominen <drac@gentoo.org>
  xfce4-taskmanager-0.3.2.ebuild:
  RESTRICT="test" for now.

  12 Mar 2007; Bryan Østergaard <kloeri@gentoo.org>
  xfce4-taskmanager-0.3.2.ebuild:
  Stable on Alpha + IA64.
